# citerne

./: Cargo.toml  README.md
citerne-derive/: Cargo.toml
citerne-derive/src/: attributes.rs  lib.rs
migrations/2022-09-22-100330_dummy/: down.sql  up.sql
src/: lib.rs  schema.rs
tests/: dummy.sql
