[package]
name = "citerne"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
testcontainers = "0.14.0"
diesel_migrations = "2.0.0"
diesel = { version = "2.0.0" }
gazole-test-derive = {path = "citerne-derive" }

[features]
postgres = [ "diesel/postgres", "gazole-test-derive/postgres" ]
mysql = [ "diesel/mysql", "gazole-test-derive/mysql" ]

[workspace] 
members = ["citerne-derive"]
