[package]
name = "citerne"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
testcontainers = "0.14"
diesel_migrations = "2"
diesel = { version = "2" }
citerne-derive = { path = "citerne-derive" }

[features]
default = ["postgres"]
postgres = [ "diesel/postgres", "citerne-derive/postgres" ]

[workspace]
members = ["citerne-derive"]
