[package]
name = "citerne"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/oknozor/citerne"
documentation = "https://docs.rs/citerne"
license = "MIT"
readme = "README.md"
description = """
A wrapper around diesel and testcontainers
providing a single proc macro to run tests on a containerized database.
"""

[dependencies]
testcontainers = "0.14"
diesel_migrations = "2"
diesel = { version = "2" }
citerne-derive = { path = "citerne-derive" }

[features]
default = ["postgres"]
postgres = [ "diesel/postgres", "citerne-derive/postgres" ]

[workspace]
members = ["citerne-derive"]
